# handy-ml

./: LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: optimize_satisfy_early_stopping.py  ordinal_regression.py  prediction_confidence.py
