[tool.poetry]
name = "handy-ml"
version = "0.1.0"
description = "A personal collection of ML pieces of code in case they help somebody"
authors = ["Javier Beltrán <javierbeltranj@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sklearn = "^0.0"
torch = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
